# hachette-palette

./: coloring_book.py  config.py  docker-compose.yml  language_module.py  main.py  markers.py  markers_handler.py  palette_handler.py  palette_visualizer.py  pyproject.toml  user_markers_db.py  user_state.py
coloring_books/: family_dict.json  heroes_vs_mechants_dict.json  loony1_dict.json  loony2_dict.json  love_dict.json  petites_princesses_dict.json
markers_palettes/: dict_grasp.json  dict_guangna_120.json  dict_guangna_168.json  dict_guangna_240.json  dict_languo_series.json
models/: CAM02UCSColorMatcher.py  CIEDE2000ColorMatcher.py  CLIPColorMatcher.py  LPIPSColorMatcher.py
